# grapheneos-ai

./: .gitignore  CHANGELOG.md  LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/satory/graphenosai/: AssistantUITest.kt  ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp  whisper_jni_stub.cpp
app/src/main/java/com/satory/graphenosai/: AssistantApplication.kt  MainActivity.kt
app/src/main/java/com/satory/graphenosai/audio/: AudioCaptureManager.kt  SpeechRecognizerManager.kt  VoskTranscriber.kt  WhisperTranscriber.kt
app/src/main/java/com/satory/graphenosai/llm/: ChatSession.kt  CopilotClient.kt  GitHubCopilotAuth.kt  OpenRouterClient.kt
app/src/main/java/com/satory/graphenosai/receiver/: AssistantShortcutReceiver.kt
app/src/main/java/com/satory/graphenosai/search/: BraveSearchClient.kt
app/src/main/java/com/satory/graphenosai/security/: SecureKeyManager.kt
app/src/main/java/com/satory/graphenosai/service/: AssistantAccessibilityService.kt  AssistantService.kt  AssistantTileService.kt  AssistantVoiceInteractionService.kt  AssistantVoiceInteractionSessionService.kt
app/src/main/java/com/satory/graphenosai/storage/: ChatHistoryManager.kt
app/src/main/java/com/satory/graphenosai/tts/: TTSManager.kt
app/src/main/java/com/satory/graphenosai/ui/: CompactAssistantUI.kt  FullscreenResponseScreen.kt  MarkdownText.kt  SettingsManager.kt  SettingsScreen.kt  VoskLanguageManagerScreen.kt
app/src/main/java/com/satory/graphenosai/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/satory/graphenosai/util/: PdfExtractor.kt
app/src/main/res/drawable/: ic_assistant.xml
app/src/main/res/values/: strings.xml  themes.xml  themes_overlay.xml
app/src/main/res/xml/: accessibility_service_config.xml  network_security_config.xml  voice_interaction_service.xml
app/src/test/java/com/satory/graphenosai/: AssistantUnitTest.kt  ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
